Bug 321577 - "Create New..." menu is enabled when a search is finished
Summary: "Create New..." menu is enabled when a search is finished
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-24 19:48 UTC by Julián Unrrein
Modified: 2013-07-31 17:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julián Unrrein 2013-06-24 19:48:13 UTC
When searching files/folder, the "Create new" and "Properties" context menu entries should be disabled.

When entering a location that doesn't exist or we don't have the necessary permissions to view (the first through the location bar, the second when browsing /root/ for example) almost all of the context menu entries should be disabled, since no action can be applied here.

Reproducible: Always
Comment 1 Frank Reininghaus 2013-06-24 20:14:39 UTC
Thanks for the report. Is the "Create New..." menu really enabled for you when searching? I cannot reproduce that.
Comment 2 Frank Reininghaus 2013-06-24 20:17:04 UTC
About the "Properties": in principle, you're right that this action does not make much sense for the search, but then there are lots of other kioslaves where the "Properties" don't have a real meaning (remote, network, smb, ....). I'm not sure if we should really add a hard-coded list of locations where we should not show the "Properties".
Comment 3 Julián Unrrein 2013-06-24 23:25:38 UTC
(In reply to comment #1)
> Thanks for the report. Is the "Create New..." menu really enabled for you
> when searching? I cannot reproduce that.

Yes, it is enabled as of today. When trying to create a folder, it said "The backend does not support the operation". Notice that I was using Dolphin 2.2 under KDE 4.10.4 .
Comment 4 Julián Unrrein 2013-06-24 23:27:45 UTC
(In reply to comment #2)
> About the "Properties": in principle, you're right that this action does not
> make much sense for the search, but then there are lots of other kioslaves
> where the "Properties" don't have a real meaning (remote, network, smb,
> ....). I'm not sure if we should really add a hard-coded list of locations
> where we should not show the "Properties".

A hard-coded list of locations sounds way too dirty, but I don't see another way it could be done.

About the other options (open with Gwenview, Compress, etc), can it be done in a nice way?
Comment 5 Frank Reininghaus 2013-06-25 08:41:30 UTC
(In reply to comment #3)
> (In reply to comment #1)
> > Thanks for the report. Is the "Create New..." menu really enabled for you
> > when searching? I cannot reproduce that.
> 
> Yes, it is enabled as of today. When trying to create a folder, it said "The
> backend does not support the operation". Notice that I was using Dolphin 2.2
> under KDE 4.10.4 .

OK, I can confirm now, but only when the search is finished.

(In reply to comment #4)
> About the other options (open with Gwenview, Compress, etc), can it be done
> in a nice way?

I don't see what's wrong about opening images with Gwenview.

About the actions that might need write permissions in order to work correctly: I think that we cannot do anything about this inside Dolphin. These actions are provided by other applications.
Comment 6 Julián Unrrein 2013-06-25 15:05:52 UTC
There is nothing wrong about opening images with Gwenview, Compress, etc., except that it doesn't seem right that they are available when the current directory doesn't exist (reached using the location bar) or we don't have permission to even view it (as for /root/).
Comment 7 Frank Reininghaus 2013-07-31 17:21:23 UTC
Git commit 8325140ac2dc34fb48e6f7a6fb6f438c6c43cff6 by Frank Reininghaus.
Committed on 31/07/2013 at 17:19.
Pushed by freininghaus into branch 'master'.

Do not enable the "Create New..." menu when a search is finished
FIXED-IN: 4.12.0
REVIEW: 111805

M  +1    -1    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/8325140ac2dc34fb48e6f7a6fb6f438c6c43cff6