Do not enable the "Create New..." menu when a search is finished

BUG: 321577
FIXED-IN: 4.12.0
REVIEW: 111805